# magic_mirror

./: .gitignore
1_Take_Pictures/: CMakeLists.txt
1_Take_Pictures/src/: take_pic.cpp
2_Training_facerecognition/: CMakeLists.txt  launch_training.sh
2_Training_facerecognition/src/: preparePhoto.cpp  training.cpp
2_Training_facerecognition/training_model/: model.yaml
2_Training_facerecognition/valid_pics/: rename_with_num.sh
3_FaceRecognition/: CMakeLists.txt  launch_vision.sh
3_FaceRecognition/config/: people.csv
3_FaceRecognition/src/: vision.cpp
html/: index.php  style.css
